Fix css to not cut off student's head

--- a/khanlabstudios/src/globals.module.css
+++ b/khanlabstudios/src/globals.module.css
@@ -269,18 +269,16 @@ body {
 }
 
 .cardImage {
-    width: 100%;
-    height: auto;
-    border-radius: 12px;
-    margin-bottom: 1rem;
-    max-width: 100px;
-    max-height: 100px;
     width: 100px;
     height: 100px;
+    border-radius: 12px;
+    margin-bottom: 1rem;
     object-fit: cover;
+    object-position: top;
+    /* Important: Aligns the image to the top */
     float: right;
-    float: top;
 }
+
 
 .cardStudentDepartment::before {
     content: "Department: ";
